--- a/employeefrontend/templates/authenticate/main.html
+++ b/employeefrontend/templates/authenticate/main.html
@@ -4,7 +4,21 @@
 
 <br><br>
 
-<h4>NexCour Employee Registry</h4>
+<div class="col-md-6 offset-md-3">
+	<div><h4>NexCour Employee Registry</h4></div>
+		<br><br>
+
+
+		<form>
+		  <div class="form-row">
+		    <div class="col">
+		      <input type="text" class="form-control" placeholder="Enter ID Number or Name">
+		    </div>
+		    <div class="col">
+		      <button type="submit" class="btn btn-primary">Submit</button>
+		    </div>
+		  </div>
+		</form>
 
 
 
